fixed social-nav overflow

--- a/src/scss/3-pages/_footer.scss
+++ b/src/scss/3-pages/_footer.scss
@@ -1,5 +1,6 @@
 .footer{
     padding: 6rem 0;
+    overflow: hidden;
 
     .footer-content{
         width: 50%;
